--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#41414C" />
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
     <title>JobsCalc</title>
 
-    <link rel="stylesheet" href="./styles/main.css" />
-    <link rel="stylesheet" href="./styles/partials/page-header.css" />
-    <link rel="stylesheet" href="./styles/partials/cards.css" />
-    <link rel="stylesheet" href="./styles/partials/buttons.css" />
-    <link rel="stylesheet" href="./styles/partials/forms.css" />
-    <link rel="stylesheet" href="./styles/partials/animations.css" />
-    <link rel="stylesheet" href="./styles/pages/profile.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/partials/page-header.css" />
+    <link rel="stylesheet" href="/styles/partials/cards.css" />
+    <link rel="stylesheet" href="/styles/partials/buttons.css" />
+    <link rel="stylesheet" href="/styles/partials/forms.css" />
+    <link rel="stylesheet" href="/styles/partials/animations.css" />
+    <link rel="stylesheet" href="/styles/pages/profile.css" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -24,22 +24,16 @@
     
   </head>
   <body id="page-profile">
-    <header class="page-header inner">
-      <div class="container animate-up">
-        <a href="index.html" class="back">
-          <img src="./images/back.svg" alt="" />
-        </a>
-        <h1>Meu Perfil</h1>
-      </div>
-    </header>
+
+    <%- include('parts/page-header', { title: 'Meu Perfil'}) %> 
 
     <div class="container animate-up delay-2">
       <aside class="card">
-        <img src="https://avatars.githubusercontent.com/u/17316392?s=460&u=6912a91a70bc89745a2079fdcdad3bc3ce370f13&v=4" alt="Jakeliny">
-        <h2>Jakeliny</h2>
+        <img src="<%= Profile.avatar %>" alt="<%= Profile.name %>">
+        <h2><%= Profile.name %> </h2>
         <p>
           O valor da sua hora é <br/>
-          <strong>R$ 75,00</strong>
+          <strong>R$ <%= Profile["price-per-hour"] %>,00</strong>
         </p>
         <button class="button green" form="form-profile" type="submit">Salvar dados</button>
       </aside>
@@ -53,7 +47,7 @@
             <div class="input-group">
               <div class="input-wrapper">
                 <label for="name">Nome</label>
-                <input type="text" id="name" name="name" />
+                <input type="text" id="name" name="name" value="<%= Profile.name %>"/>
               </div>
 
               <div class="input-wrapper">
@@ -62,7 +56,8 @@
                 placeholder="https://"
                 type="url" 
                 id="avatar" 
-                name="avatar" />
+                name="avatar"
+                value="<%= Profile.avatar %>"/>
               </div>
             </div>
           </fieldset>
@@ -79,7 +74,8 @@
                   step="0.1" 
                   id="monthly-budget" 
                   name="monthly-budget" 
-                  placeholder="R$"/>
+                  placeholder="R$"
+                  value="<%= Profile["monthly-budget"] %>"/>
               </div>
 
               <div class="input-wrapper">
@@ -88,7 +84,8 @@
                 <input 
                   type="number"
                   id="hours-per-day" 
-                  name="hours-per-day" />
+                  name="hours-per-day"
+                  value="<%= Profile["hours-per-day"] %>"/>
               </div>
             </div>
 
@@ -99,7 +96,8 @@
                 <input
                   type="number"
                   id="days-per-week" 
-                  name="days-per-week" />
+                  name="days-per-week"
+                  value="<%= Profile["days-per-week"] %>"/>
               </div>
 
               <div class="input-wrapper">
@@ -108,7 +106,8 @@
                 <input 
                   type="number" 
                   id="vacation-per-year" 
-                  name="vacation-per-year" />
+                  name="vacation-per-year"
+                  value="<%= Profile["vacation-per-year"] %>"/>
               </div>
             </div>
           </fieldset>
