--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -88,7 +88,15 @@
               </div>
               <div class="deadline column">
                 <span>Prazo</span>
-                <p><%= job.remaining %> <%= job.remaining === 1 ? 'dia' : 'dias' %> para a entrega</p>
+                <p>                
+                  <% if(job.remaining === 0) { %> Prazo encerrado <% }
+                      else {
+                        if(job.remaining === 1) { %><%= job.remaining %> dia para a entrega <% }
+                          else
+                            { %><%= job.remaining %> dias para a entrega <% }
+                          }                  
+                  %>
+                </p>
               </div>
               <div class="amount column">
                 <span>Valor</span>
