--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -29,11 +29,11 @@
 
     <div class="container animate-up delay-2">
       <aside class="card">
-        <img src="<%= Profile.avatar %>" alt="<%= Profile.name %>">
-        <h2><%= Profile.name %> </h2>
+        <img src="<%= profile.data.avatar %>" alt="<%= profile.data.name %>">
+        <h2><%= profile.data.name %> </h2>
         <p>
           O valor da sua hora é <br/>
-          <strong>R$ <%= Profile["price-per-hour"] %>,00</strong>
+          <strong>R$ <%= profile.data["price-per-hour"] %>,00</strong>
         </p>
         <button class="button green" form="form-profile" type="submit">Salvar dados</button>
       </aside>
@@ -47,7 +47,7 @@
             <div class="input-group">
               <div class="input-wrapper">
                 <label for="name">Nome</label>
-                <input type="text" id="name" name="name" value="<%= Profile.name %>"/>
+                <input type="text" id="name" name="name" value="<%= profile.data.name %>"/>
               </div>
 
               <div class="input-wrapper">
@@ -57,7 +57,7 @@
                 type="url" 
                 id="avatar" 
                 name="avatar"
-                value="<%= Profile.avatar %>"/>
+                value="<%= profile.data.avatar %>"/>
               </div>
             </div>
           </fieldset>
@@ -75,7 +75,7 @@
                   id="monthly-budget" 
                   name="monthly-budget" 
                   placeholder="R$"
-                  value="<%= Profile["monthly-budget"] %>"/>
+                  value="<%= profile.data["monthly-budget"] %>"/>
               </div>
 
               <div class="input-wrapper">
@@ -85,7 +85,7 @@
                   type="number"
                   id="hours-per-day" 
                   name="hours-per-day"
-                  value="<%= Profile["hours-per-day"] %>"/>
+                  value="<%= profile.data["hours-per-day"] %>"/>
               </div>
             </div>
 
@@ -97,7 +97,7 @@
                   type="number"
                   id="days-per-week" 
                   name="days-per-week"
-                  value="<%= Profile["days-per-week"] %>"/>
+                  value="<%= profile.data["days-per-week"] %>"/>
               </div>
 
               <div class="input-wrapper">
@@ -107,7 +107,7 @@
                   type="number" 
                   id="vacation-per-year" 
                   name="vacation-per-year"
-                  value="<%= Profile["vacation-per-year"] %>"/>
+                  value="<%= profile.data["vacation-per-year"] %>"/>
               </div>
             </div>
           </fieldset>
