--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -33,13 +33,13 @@
         <h2><%= profile.data.name %> </h2>
         <p>
           O valor da sua hora é <br/>
-          <strong>R$ <%= profile.data["price-per-hour"] %>,00</strong>
+          <strong>R$ <%= profile.data["price-per-hour"].toFixed(2).replace('.',',') %></strong>
         </p>
         <button class="button green" form="form-profile" type="submit">Salvar dados</button>
       </aside>
       <main>
 
-        <form id="form-profile">
+        <form id="form-profile" method="post" action="/profile">
           <fieldset>
             <legend>Dados do perfil</legend>
             <div class="separator light"></div>
