--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -31,13 +31,19 @@
           <h2 class="sr-only">Homepage</h2>
           <img id="logo" src="/images/logo.svg" alt="Logo" />
           <span id="notification">
-            <img src="/images/alert-octagon.svg" alt="Alerta" />
-            Você tem 2 horas livres no seu dia
+            <img src="/images/alert-octagon.svg" alt="Alerta" />            
+            <% switch (freeHours) {
+              case 0: %> Você não tem horas livres no seu dia! <% ;
+                break;
+              case 1: %> Você tem <%= freeHours %> hora livre no seu dia <% ;
+                break;
+              default: %> Você tem <%= freeHours %> horas livres no seu dia <% ;
+            } %>
           </span>
           <a href="/profile" id="avatar-profile">
-            <p>Jakeliny <span>Ver perfil</span></p>
+            <p><%= profile.name %>  <span>Ver perfil</span></p>
             <img
-              src="https://avatars.githubusercontent.com/u/17316392?s=460&u=6912a91a70bc89745a2079fdcdad3bc3ce370f13&v=4"
+              src="<%= profile.avatar %>"
             />
           </a>
         </section>
@@ -49,16 +55,22 @@
 
           <div class="info">
             <div class="total">
-              <strong>12</strong>
-              Projetos ao total
+              <strong><%= statusCount.total %> </strong>
+              <% if(statusCount.total === 1){
+                %> Projeto no total <% }
+                else { %>
+                  Projetos no total <% } %>
             </div>
             <div class="in-progress">
-              <strong>7</strong>
+              <strong><%= statusCount.progress %> </strong>
               Em andamento
             </div>
             <div class="finished">
-              <strong>4</strong>
-              Encerrados
+              <strong><%= statusCount.done %> </strong>
+              <% if(statusCount.done === 1){
+                %> Encerrado <% }
+                else { %>
+                  Encerrados <% } %>
             </div>
           </div>
           <a class="button orange" href="/job">
