--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -30,13 +30,13 @@
 
     <div class="container animate-up delay-2">
       <aside class="card">
-        <img src="<%= profile.data.avatar %>" alt="<%= profile.data.name %>">
+        <img src="<%= profile.avatar %>" alt="<%= profile.name %>">
         <h2>
-          <%= profile.data.name %>
+          <%= profile.name %>
         </h2>
         <p>
           O valor da sua hora é <br />
-          <strong>R$ <%= profile.data["price-per-hour"].toFixed(2).replace('.',',') %></strong>
+          <strong>R$ <%= profile["price-per-hour"].toFixed(2).replace('.',',') %></strong>
         </p>
         <button class="button green" form="form-profile" type="submit">Salvar dados</button>
       </aside>
@@ -50,12 +50,12 @@
             <div class="input-group">
               <div class="input-wrapper">
                 <label for="name">Nome</label>
-                <input type="text" id="name" name="name" value="<%= profile.data.name %>" />
+                <input type="text" id="name" name="name" value="<%= profile.name %>" />
               </div>
 
               <div class="input-wrapper">
                 <label for="avatar">Link da foto</label>
-                <input placeholder="https://" type="url" id="avatar" name="avatar" value="<%= profile.data.avatar %>" />
+                <input placeholder="https://" type="url" id="avatar" name="avatar" value="<%= profile.avatar %>" />
               </div>
             </div>
           </fieldset>
@@ -68,30 +68,27 @@
               <div class="input-wrapper">
                 <label for="monthly-budget">Quanto eu <br />quero ganhar por mês?</label>
                 <input type="amount" step="0.1" id="monthly-budget" name="monthly-budget" placeholder="R$"
-                  value="<%= profile.data[" monthly-budget"] %>"/>
+                  value="<%= profile["monthly-budget"] %>"/>
               </div>
 
               <div class="input-wrapper">
-                <label for="hours-per-day">Quantas horas <br />
+                <label for="hours-per-day">Quantas horas <br>
                   quero trabalhar por dia?</label>
-                <input type="number" id="hours-per-day" name="hours-per-day" value="<%= profile.data[" hours-per-day"]
-                  %>"/>
+                <input type="number" id="hours-per-day" name="hours-per-day" value="<%= profile["hours-per-day"] %>">
               </div>
             </div>
 
             <div class="input-group">
               <div class="input-wrapper">
-                <label for="days-per-week">Quantos dias <br />quero
+                <label for="days-per-week">Quantos dias <br>quero
                   trabalhar por semana?</label>
-                <input type="number" id="days-per-week" name="days-per-week" value="<%= profile.data[" days-per-week"]
-                  %>"/>
+                <input type="number" id="days-per-week" name="days-per-week" value="<%= profile["days-per-week"] %>">
               </div>
 
               <div class="input-wrapper">
                 <label for="vacation-per-year">Quantas semanas <br />
                   por ano você quer tirar férias?</label>
-                <input type="number" id="vacation-per-year" name="vacation-per-year" value="<%= profile.data["
-                  vacation-per-year"] %>"/>
+                <input type="number" id="vacation-per-year" name="vacation-per-year" value="<%= profile["vacation-per-year"] %>"/>
               </div>
             </div>
           </fieldset>
