--- a/src/views/job.ejs
+++ b/src/views/job.ejs
@@ -42,15 +42,15 @@
 
             <div class="input-group">
               <div class="input-wrapper">
-                <label for="daily-hours">Quantas horas <br />
+                <label for="daily_hours">Quantas horas <br />
                   por dia vai dedicar ao job?</label>
-                <input type="number" step="0.1" id="daily-hours" name="daily-hours" />
+                <input type="number" step="0.1" id="daily_hours" name="daily_hours" />
               </div>
 
               <div class="input-wrapper">
-                <label for="total-hours">Estimativa de <br />
+                <label for="total_hours">Estimativa de <br />
                   horas para esse Job?</label>
-                <input type="number" id="total-hours" name="total-hours" />
+                <input type="number" id="total_hours" name="total_hours" />
               </div>
             </div>
           </fieldset>
