--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -161,10 +161,7 @@
             form="delete-job">Excluir Job</button>
         </footer>
       </div>
-      <form 
-        method="post" 
-        action="/job/delete" 
-        id="delete-job"></form>
+      <form method="post" action="/job/delete" id="delete-job"></form>
     </div>
     <!-- end modal-wrapper -->
   </body>
